package main.java.BackgroundAttributes;

//import com.amazon.ata.aws.dynamodb.DynamoDbClientProvider;
//import com.amazonaws.services.dynamodbv2.AmazonDynamoDB;
//import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBMapper;

public class FamilyHistory {
//    AmazonDynamoDB dynamoDBClient = DynamoDbClientProvider.getDynamoDBClient();
//    DynamoDBMapper mapper = new DynamoDBMapper(dynamoDBClient);


    public static FamilyHistory getRandomFamilyHistory() {
        //ToDo: Connect to dynamoDb table and finish method
        return null;
    }
}
